# ray-tracing

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rt_utility.h  sphere.h  vec3.h
